--- a/views/addProduceSale.pug
+++ b/views/addProduceSale.pug
@@ -78,4 +78,4 @@ html
     footer.footer
       p © 2025 Karibu Grocery Limited. All rights reserved.
 
-    script(src='/js/addproduceSale.js')
+    script(src='/js/addproduceSale.js?v=2')
