--- a/public/css/produceSalesList.css
+++ b/public/css/produceSalesList.css
@@ -54,6 +54,7 @@ table#salesTable {
   border-collapse: collapse;
   margin-bottom: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  table-layout: fixed;
 }
 
 table#salesTable th,
@@ -63,6 +64,42 @@ table#salesTable td {
   text-align: left;
   font-size: 14px;
   background-color: white;
+}
+
+table#salesTable th:nth-child(1),
+table#salesTable td:nth-child(1) {
+  width: 12%;
+}
+
+table#salesTable th:nth-child(2),
+table#salesTable td:nth-child(2) {
+  width: 10%;
+}
+
+table#salesTable th:nth-child(3),
+table#salesTable td:nth-child(3) {
+  width: 12%;
+}
+
+table#salesTable th:nth-child(4),
+table#salesTable td:nth-child(4) {
+  width: 13%;
+}
+
+table#salesTable th:nth-child(5),
+table#salesTable td:nth-child(5) {
+  width: 13%;
+}
+
+table#salesTable th:nth-child(6),
+table#salesTable td:nth-child(6) {
+  width: 20%;
+}
+
+table#salesTable th:nth-child(7),
+table#salesTable td:nth-child(7) {
+  width: 20%;
+  text-align: center;
 }
 
 table#salesTable th {
