--- a/views/procurementlist.pug
+++ b/views/procurementlist.pug
@@ -68,4 +68,5 @@ html(lang="en")
       | &copy; #{year} Karibu Grocery Limited. All rights reserved.
 
     script(src="/js/deleteModal.js")
+    script(src="/js/procurementlist.js")
 
