--- a/views/producesaleslist.pug
+++ b/views/producesaleslist.pug
@@ -9,11 +9,14 @@ html
   body
     // Top Navigation Bar
     nav.navbar
-      .nav-links
-        a(href='/') Home
-        a(href='/addProduceSale') Add Sale
-        a(href='/addCreditSale') Add Credit
-        a(href='/logout') Logout
+      .nav-container
+        span.project-name Karibu Groceries Limited
+        
+        .nav-links
+          a(href='/') Home
+          a(href='/addProduceSale') Add Sale
+          a(href='/addCreditSale') Add Credit
+          a(href='/logout') Logout
 
     h2 Produce Sales List
 
