--- a/views/creditSaleList.pug
+++ b/views/creditSaleList.pug
@@ -9,11 +9,14 @@ html
   body
     // Top Navigation Bar
     nav.navbar
-      .nav-links
-        a(href='/') Home
-        a(href='/addCreditSale') Add Credit
-        a(href='/addprocurement') Procurement
-        a(href='/logout') Logout
+      .nav-container
+        span.project-name Karibu Groceries Limited
+        
+        .nav-links
+          a(href='/') Home
+          a(href='/addCreditSale') Add Credit
+          a(href='/addprocurement') Procurement
+          a(href='/logout') Logout
 
     .container
       h2 Credit Sales List
